<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".Login">


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="215dp"
                android:layout_marginTop="40dp"
                app:srcCompat="@drawable/admin_logo" />

            <TextView
                android:id="@+id/txtLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:fontFamily="monospace"
                android:gravity="center_horizontal"
                android:text="Login"
                android:textColor="@color/colorText"
                android:textSize="36sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/edtUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:drawableStart="@drawable/ic_email"
                android:ems="10"
                android:hint="@string/UsernameHint"
                android:inputType="textEmailAddress"
                android:textColor="#FFEB3B"
                android:textColorHint="@color/colorText" />


            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_lock"
                android:ems="10"
                android:hint="@string/PasswordHint"
                android:inputType="textPassword"
                android:textColor="#FFEB3B"
                android:textColorHint="@color/colorText" />


            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_design"
                android:fontFamily="sans-serif-medium"
                android:onClick="LoginHere"
                android:text="Login"
                android:textColor="@color/colorText"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:fontFamily="sans-serif-medium"
                android:gravity="center_horizontal"
                android:onClick="openRegister"
                android:text="@string/lblRegister"
                android:textColor="@color/colorText"
                android:textSize="16sp" />


        </LinearLayout>
    </ScrollView>





</androidx.constraintlayout.widget.ConstraintLayout>